// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense 1`] = `
<div>
  Viewing 1 expense totaling $ 2.31
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div>
  Viewing 23 expenses totaling $ 23,101.44
</div>
`;
